Support for scene graph.