@@ -1,27 +1,16 @@
 //-----------------------------------------------------------------------------
 // Colorize MultimediaLib
-// Copyright 2009-2022 Colorize
+// Copyright 2009-2023 Colorize
 // Apache license (http://www.apache.org/licenses/LICENSE-2.0)
 //-----------------------------------------------------------------------------
 
 package nl.colorize.multimedialib.demo;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.net.HttpHeaders;
-import nl.colorize.multimedialib.graphics.Align;
-import nl.colorize.multimedialib.graphics.Animation;
-import nl.colorize.multimedialib.graphics.ColorRGB;
-import nl.colorize.multimedialib.graphics.Image;
-import nl.colorize.multimedialib.graphics.OutlineFont;
-import nl.colorize.multimedialib.graphics.Primitive;
-import nl.colorize.multimedialib.graphics.Sprite;
-import nl.colorize.multimedialib.graphics.SpriteSheet;
-import nl.colorize.multimedialib.graphics.Text;
-import nl.colorize.multimedialib.graphics.Transform;
 import nl.colorize.multimedialib.math.Point2D;
 import nl.colorize.multimedialib.math.Polygon;
 import nl.colorize.multimedialib.math.RandomGenerator;
 import nl.colorize.multimedialib.math.Rect;
+import nl.colorize.multimedialib.math.Region;
 import nl.colorize.multimedialib.renderer.Audio;
 import nl.colorize.multimedialib.renderer.Canvas;
 import nl.colorize.multimedialib.renderer.FilePointer;
@@ -29,20 +18,30 @@ import nl.colorize.multimedialib.renderer.FrameStats;
 import nl.colorize.multimedialib.renderer.InputDevice;
 import nl.colorize.multimedialib.renderer.KeyCode;
 import nl.colorize.multimedialib.renderer.MediaLoader;
-import nl.colorize.multimedialib.renderer.NetworkAccess;
-import nl.colorize.multimedialib.scene.DisplayObject;
-import nl.colorize.multimedialib.scene.Layer;
+import nl.colorize.multimedialib.renderer.Network;
+import nl.colorize.multimedialib.scene.Effect;
 import nl.colorize.multimedialib.scene.Scene;
 import nl.colorize.multimedialib.scene.SceneContext;
-import nl.colorize.multimedialib.scene.Stage;
 import nl.colorize.multimedialib.scene.Updatable;
-import nl.colorize.multimedialib.scene.effect.Effect;
-import nl.colorize.multimedialib.scene.effect.TransitionEffect;
-import nl.colorize.util.Callback;
+import nl.colorize.multimedialib.scene.WipeTransition;
+import nl.colorize.multimedialib.stage.Align;
+import nl.colorize.multimedialib.stage.Animation;
+import nl.colorize.multimedialib.stage.ColorRGB;
+import nl.colorize.multimedialib.stage.Image;
+import nl.colorize.multimedialib.stage.Layer2D;
+import nl.colorize.multimedialib.stage.OutlineFont;
+import nl.colorize.multimedialib.stage.Primitive;
+import nl.colorize.multimedialib.stage.Shader;
+import nl.colorize.multimedialib.stage.Sprite;
+import nl.colorize.multimedialib.stage.SpriteAtlas;
+import nl.colorize.multimedialib.stage.Stage;
+import nl.colorize.multimedialib.stage.Text;
+import nl.colorize.multimedialib.stage.Transform;
 import nl.colorize.util.LogHelper;
 import nl.colorize.util.animation.Interpolation;
 import nl.colorize.util.animation.Timeline;
 import nl.colorize.util.http.Headers;
+import nl.colorize.util.http.PostData;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -64,30 +63,34 @@ public class Demo2D implements Scene {
 
     private SceneContext context;
 
-    private SpriteSheet marioSpriteSheet;
+    private SpriteAtlas marioSpriteSheet;
     private OutlineFont font;
     private List<Mario> marios;
     private Effect colorizeLogo;
     private Audio audioClip;
     private Text hud;
+    private Shader sepiaShader;
 
     public static final int DEFAULT_CANVAS_WIDTH = 800;
     public static final int DEFAULT_CANVAS_HEIGHT = 600;
-    public static final int DEFAULT_FRAMERATE = 60;
 
-    private static final FilePointer MARIO_SPRITES_FILE = new FilePointer("mario.png");
-    private static final FilePointer AUDIO_FILE = new FilePointer("test.mp3");
+    private static final FilePointer MARIO_SPRITES_FILE = new FilePointer("demo/demo.png");
+    private static final FilePointer AUDIO_FILE = new FilePointer("demo/demo.mp3");
     private static final FilePointer COLORIZE_LOGO = new FilePointer("colorize-logo.png");
+    private static final FilePointer FRAGMENT_SHADER = new FilePointer("demo/sepia-fragment.glsl");
+    private static final FilePointer VERTEX_SHADER = new FilePointer("demo/sepia-vertex.glsl");
+
     private static final int INITIAL_MARIOS = 20;
-    private static final List<String> DIRECTIONS = ImmutableList.of("north", "east", "south", "west");
+    private static final List<String> DIRECTIONS = List.of("north", "east", "south", "west");
     private static final int BUTTON_WIDTH = 100;
     private static final int BUTTON_HEIGHT = 25;
     private static final ColorRGB RED_BUTTON = new ColorRGB(228, 93, 97);
     private static final ColorRGB GREEN_BUTTON = ColorRGB.parseHex("#72A725");
+    private static final ColorRGB PINK_BUTTON = ColorRGB.parseHex("#B75797");
     private static final ColorRGB BACKGROUND_COLOR = ColorRGB.parseHex("#343434");
     private static final Transform MASK_TRANSFORM = Transform.withMask(ColorRGB.WHITE);
-    private static final String TEST_URL = "http://www.colorize.nl";
     private static final ColorRGB COLORIZE_COLOR = ColorRGB.parseHex("#e45d61");
+    private static final String EXAMPLE_URL = "https://dashboard.clrz.nl/rest/echo";
     private static final Logger LOGGER = LogHelper.getLogger(Demo2D.class);
 
     @Override
@@ -103,19 +106,21 @@ public class Demo2D implements Scene {
 
         font = mediaLoader.loadDefaultFont(12, ColorRGB.WHITE);
         audioClip = mediaLoader.loadAudio(AUDIO_FILE);
+        sepiaShader = context.getMediaLoader().loadShader(VERTEX_SHADER, FRAGMENT_SHADER);
 
         initHUD(context);
         initEffects();
+        sendHttpRequest(context.getNetwork());
     }
 
     private void initMarioSprites(MediaLoader mediaLoader) {
         Image image = mediaLoader.loadImage(MARIO_SPRITES_FILE);
-        marioSpriteSheet = new SpriteSheet(image);
+        marioSpriteSheet = new SpriteAtlas();
 
         int y = 0;
-        for (String direction : ImmutableList.of("north", "east", "south", "west")) {
+        for (String direction : DIRECTIONS) {
             for (int i = 0; i <= 4; i++) {
-                marioSpriteSheet.markRegion(direction + "_" + i, new Rect(i * 48, y, 48, 64));
+                marioSpriteSheet.add(direction + "_" + i, image, new Region(i * 48, y, 48, 64));
             }
             y += 64;
         }
@@ -123,7 +128,7 @@ public class Demo2D implements Scene {
 
     private void initHUD(SceneContext context) {
         Stage stage = context.getStage();
-        Layer hudLayer = stage.addLayer("hud");
+        Layer2D hudLayer = stage.addLayer("hud");
 
         hud = new Text("", font);
         hud.getPosition().set(20, 20);
@@ -133,34 +138,34 @@ public class Demo2D implements Scene {
         createButton(context, "Add sprites", RED_BUTTON, 0, () -> addMarios(stage, 10));
         createButton(context, "Remove sprites", RED_BUTTON, 30, () -> removeMarios(10));
         createButton(context, "Play sound", GREEN_BUTTON, 60, audioClip::play);
-        createButton(context, "Background", GREEN_BUTTON, 90, () -> toggleBackgroundColor(stage));
+        createButton(context, "Background", GREEN_BUTTON, 90, this::toggleBackgroundColor);
+        createButton(context, "Toggle shader", PINK_BUTTON, 120, this::toggleShader);
 
         Polygon hexagon = new Polygon(80, 70, 120, 70, 135, 100, 120, 130, 80, 130, 65, 100);
         Primitive hexagonPrimitive = Primitive.of(hexagon, COLORIZE_COLOR);
         hexagonPrimitive.setAlpha(50f);
+        hudLayer.add(hexagonPrimitive);
 
-        new DisplayObject()
-            .withGraphics(hexagonPrimitive)
-            .withLayer(hudLayer)
-            .withFrameHandler(deltaTime -> {
-                hexagonPrimitive.setPosition(50f, stage.getCanvas().getHeight() - 150f);
-            })
-            .attachTo(context);
+        Effect effect = new Effect();
+        effect.addFrameHandler(deltaTime -> {
+            hexagonPrimitive.setPosition(50f, stage.getCanvas().getHeight() - 150f);
+        });
+        context.attach(effect);
     }
 
     private void createButton(SceneContext context, String label, ColorRGB color, int y, Runnable click) {
         Primitive bounds = Primitive.of(new Rect(
             context.getCanvas().getWidth() - BUTTON_WIDTH - 2, y + 2,
             BUTTON_WIDTH, BUTTON_HEIGHT), color);
+        context.getStage().add(context.getStage().getLayer("hud"), bounds);
 
         Text text = new Text(label, font, Align.CENTER);
         text.getPosition().set(context.getCanvas().getWidth() - BUTTON_WIDTH / 2f, y + 19);
+        context.getStage().add(context.getStage().getLayer("hud"), text);
 
-        new DisplayObject()
-            .withGraphics(bounds, text)
-            .withLayer(context.getStage().getLayer("hud"))
-            .withClickHandler(click)
-            .attachTo(context);
+        Effect effect = new Effect();
+        effect.addClickHandler(bounds, click);
+        context.attach(effect);
     }
 
     private void initEffects() {
@@ -169,18 +174,31 @@ public class Demo2D implements Scene {
         timeline.addKeyFrame(2f, 1f);
         timeline.addKeyFrame(4f, 0f);
 
-        colorizeLogo = Effect.forImage(context.getMediaLoader().loadImage(COLORIZE_LOGO), timeline);
-        Transform transform = colorizeLogo.getTransform();
-        colorizeLogo.modify(value -> colorizeLogo.setPosition(50, context.getCanvas().getHeight() - 50));
-        colorizeLogo.modify(value -> transform.setScale(80 + Math.round(value * 40f)));
-        colorizeLogo.modifyFrameUpdate(dt -> transform.addRotation(Math.round(dt * 100f)));
-        colorizeLogo.attachTo(context);
+        Sprite sprite = new Sprite(context.getMediaLoader().loadImage(COLORIZE_LOGO));
+        context.getStage().getLayer("hud").add(sprite);
 
-        TransitionEffect.reveal(context, COLORIZE_COLOR, 1.5f)
-            .attachTo(context);
+        colorizeLogo = new Effect();
+        colorizeLogo.addTimelineHandler(timeline, value -> {
+            sprite.setPosition(50, context.getCanvas().getHeight() - 50);
+            sprite.getTransform().setScale(80 + value * 40f);
+        });
+        colorizeLogo.addFrameHandler(dt -> sprite.getTransform().addRotation(dt * 100f));
+        context.attach(colorizeLogo);
+
+        context.attach(WipeTransition.reveal(context, COLORIZE_COLOR, 1.5f));
     }
 
-    private void toggleBackgroundColor(Stage stage) {
+    private void sendHttpRequest(Network network) {
+        PostData data = PostData.create("message", "1234");
+        network.post(EXAMPLE_URL, new Headers(), data, response -> {
+            LOGGER.info("Received response from HTTP request:");
+            LOGGER.info("Content-Type is " + response.getContentType().orElse("?"));
+            LOGGER.info(response.getBody().replace("\n", ""));
+        });
+    }
+
+    private void toggleBackgroundColor() {
+        Stage stage = context.getStage();
         if (stage.getBackgroundColor().equals(BACKGROUND_COLOR)) {
             stage.setBackgroundColor(ColorRGB.WHITE);
         } else {
@@ -188,12 +206,17 @@ public class Demo2D implements Scene {
         }
     }
 
+    private void toggleShader() {
+        //TODO Layer2D defaultLayer = context.getStage().getLayer(Layer2D.DEFAULT_LAYER_NAME);
+        // defaultLayer.setShader(defaultLayer.getShader() == null ? sepiaShader : null);
+    }
+
     @Override
     public void update(SceneContext context, float deltaTime) {
         InputDevice inputDevice = context.getInputDevice();
         handleClick(inputDevice, context.getStage());
         checkLogoClick(inputDevice);
-        handleSystemControls(inputDevice, context.getNetwork());
+        handleSystemControls(inputDevice);
 
         for (Mario mario : marios) {
             updateMario(mario, deltaTime);
@@ -210,9 +233,10 @@ public class Demo2D implements Scene {
 
     private void updateHUD() {
         FrameStats stats = context.getFrameStats();
+        Canvas canvas = context.getCanvas();
 
         hud.setText(
-            "Canvas:  " + context.getCanvas(),
+            "Canvas:  " + canvas,
             "Framerate:  " + Math.round(stats.getFramerate()),
             "Update time:  " + stats.getUpdateTime() + "ms",
             "Render time:  " + stats.getRenderTime() + "ms",
@@ -224,8 +248,11 @@ public class Demo2D implements Scene {
         Rect area = new Rect(0f, context.getCanvas().getHeight() - 80f, 80f, 80f);
 
         if (input.isPointerReleased(area)) {
-            Transform transform = colorizeLogo.getTransform();
-            transform.setFlipHorizontal(!transform.isFlipHorizontal());
+            colorizeLogo.withLinkedGraphics(g -> {
+                Sprite sprite = (Sprite) g;
+                Transform transform = sprite.getTransform();
+                transform.setFlipHorizontal(!transform.isFlipHorizontal());
+            });
         }
     }
 
@@ -241,7 +268,7 @@ public class Demo2D implements Scene {
 
     private boolean checkMarioClick(InputDevice inputDevice) {
         for (Mario mario : marios) {
-            if (inputDevice.isPointerReleased(mario.getBounds())) {
+            if (inputDevice.isPointerReleased(mario.sprite.getBounds())) {
                 mario.mask = !mario.mask;
                 return true;
             }
@@ -249,24 +276,12 @@ public class Demo2D implements Scene {
         return false;
     }
 
-    private void handleSystemControls(InputDevice input, NetworkAccess network) {
-        if (input.isKeyReleased(KeyCode.U)) {
-            sendRequest(network);
+    private void handleSystemControls(InputDevice input) {
+        if (input.isKeyReleased(KeyCode.N1)) {
+            context.getCanvas().changeStrategy(false);
+        } else if (input.isKeyReleased(KeyCode.N2)) {
+            context.getCanvas().changeStrategy(true);
         }
-
-        List<KeyCode> canvasControls = ImmutableList.of(KeyCode.N1, KeyCode.N2, KeyCode.N3, KeyCode.N4);
-
-        for (int i = 0; i < canvasControls.size(); i++) {
-            if (input.isKeyReleased(canvasControls.get(i))) {
-                changeCanvasStrategy(i);
-            }
-        }
-    }
-
-    private void changeCanvasStrategy(int index) {
-        Canvas.ZoomStrategy strategy = Canvas.ZoomStrategy.values()[index];
-        LOGGER.info("Changing canvas zoom strategy to " + strategy);
-        context.getCanvas().changeStrategy(strategy);
     }
 
     private void createTouchMarker(List<Point2D> positions) {
@@ -276,11 +291,12 @@ public class Demo2D implements Scene {
             timeline.addKeyFrame(1f, 100f);
             timeline.addKeyFrame(1.5f, 0f);
 
-            String text = Math.round(position.getX()) + ", " + Math.round(position.getY());
+            Text text = new Text(Math.round(position.getX()) + ", " + Math.round(position.getY()),
+                font, Align.LEFT);
+            text.setPosition(position);
+            context.getStage().getLayer("hud").add(text);
 
-            Effect.forTextAlpha(text, font, Align.LEFT, timeline)
-                .setPosition(position)
-                .attachTo(context);
+            context.attach(Effect.forTextAlpha(text, timeline));
         }
     }
 
@@ -298,8 +314,8 @@ public class Demo2D implements Scene {
     private Sprite createMarioSprite() {
         Sprite marioSprite = new Sprite();
         for (String direction : DIRECTIONS) {
-            List<Image> frames = marioSpriteSheet.get(direction + "_0",
-                direction + "_1", direction + "_2", direction + "_3", direction + "_4");
+            List<Image> frames = marioSpriteSheet.get(List.of(direction + "_0",
+                direction + "_1", direction + "_2", direction + "_3", direction + "_4"));
             Animation anim = new Animation(frames, 0.1f, true);
             marioSprite.addState(direction, anim);
         }
@@ -310,14 +326,6 @@ public class Demo2D implements Scene {
         for (int i = 0; i < amount && !marios.isEmpty(); i++) {
             marios.remove(marios.size() - 1);
         }
-    }
-
-    private void sendRequest(NetworkAccess internetAccess) {
-        LOGGER.info("Sending request to " + TEST_URL);
-
-        Headers headers = new Headers();
-        headers.add(HttpHeaders.X_DO_NOT_TRACK, "1");
-        internetAccess.get(TEST_URL, headers, Callback.from(LOGGER::info, LOGGER));
     }
 
     /**
@@ -363,12 +371,6 @@ public class Demo2D implements Scene {
                 position.getY() < 0 || position.getY() > canvasBounds.getHeight()) {
                 direction = (direction + 2) % 4;
             }
-        }
-
-        private Rect getBounds() {
-            return new Rect(position.getX() - sprite.getCurrentWidth() / 2f,
-                position.getY() - sprite.getCurrentHeight() / 2f,
-                sprite.getCurrentWidth(), sprite.getCurrentHeight());
         }
     }
 }
